Api for retrieving eservice main data to be shown in the detail page
